Fix overflowing messages

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -156,6 +156,10 @@ h2 {
   font-size: 1rem;
 }
 
+p {
+  overflow-wrap: break-word;
+}
+
 .thin-padding {
   padding: 0.3rem 0.5rem;
 }
